--- a/tasks/unit_present.yml
+++ b/tasks/unit_present.yml
@@ -25,7 +25,7 @@
         - systemd_file.state is defined
         - systemd_file.state == "absent"
 
-    - name: Include the systemd unit file edited or present tasks
+    - name: Include the systemd unit file edited or templated tasks
       ansible.builtin.include_tasks: file_present.yml
       loop: "{{ systemd_unit.files }}"
       loop_control:
@@ -34,7 +34,7 @@
       when: >-
         ( systemd_file.state is not defined ) or
         ( systemd_file.state == "edited" ) or
-        ( systemd_file.state == "present" )
+        ( systemd_file.state == "templated" )
 
     - name: Unit state set
       ansible.builtin.systemd:
