--- a/tasks/file_present.yml
+++ b/tasks/file_present.yml
@@ -17,7 +17,9 @@
         that:
           - systemd_file.state != "edited"
         fail_msg: "The {{ systemd_file.path }} file needs to exist before it can be edited, set state to templated for the file to be created."
-      when: not systemd_file_state.stat.exists | bool
+      when:
+        - systemd_file.state is defined
+        - not systemd_file_state.stat.exists | bool
 
     - name: Systemd unit file read and backed up
       block:
@@ -63,10 +65,7 @@
         - name: Comment present at the top of the systemd unit file
           ansible.builtin.blockinfile:
             path: "{{ systemd_file.path }}"
-            block: |
-              {% for systemd_comment_line in systemd_file.comment.split('\n') %}
-              # {{ systemd_comment_line }}
-              {% endfor %}
+            block: "{{ systemd_file.comment | ansible.builtin.comment }}"
             insertbefore: BOF
             mode: "0644"
             owner: root
@@ -113,6 +112,13 @@
             group: root
           register: systemd_file_present
           notify: Reload systemd
+
+        - name: Add systemd unit to the list of services to restart
+          ansible.builtin.set_fact:
+            systemd_units_restarted: "{{ systemd_units_restarted + [systemd_unit.name] }}"
+          when:
+            - systemd_file_present.changed | bool
+            - systemd_unit.name not in systemd_units_restarted
 
       when: >-
         ( not systemd_file_state.stat.exists | bool ) or
