--- a/tasks/file_present.yml
+++ b/tasks/file_present.yml
@@ -21,7 +21,7 @@
         - systemd_file.state is defined
         - not systemd_file_state.stat.exists | bool
 
-    - name: Systemd unit file read and backed up
+    - name: Systemd unit file existing tasks
       block:
 
         - name: Slurp the systemd unit file
@@ -57,42 +57,41 @@
             remote_src: true
           when: systemd_file.conf != systemd_file_vars
 
+        - name: Systemd unit file edited
+          block:
+
+            - name: Comment present at the top of the systemd unit file
+              ansible.builtin.blockinfile:
+                path: "{{ systemd_file.path }}"
+                block: "{{ systemd_file.comment | ansible.builtin.comment }}"
+                insertbefore: BOF
+                mode: "0644"
+                owner: root
+                group: root
+              when:
+                - systemd_file.comment is defined
+                - systemd_file.comment | length > 0
+
+            - name: Ansible managed comment present at the top of the file
+              ansible.builtin.lineinfile:
+                path: "{{ systemd_file.path }}"
+                line: "{{ ansible_managed | ansible.builtin.comment }}"
+                state: present
+                insertbefore: BOF
+
+            - name: Include the systemd unit file edited tasks
+              ansible.builtin.include_tasks: file_edited.yml
+              loop: "{{ systemd_file.conf | dict2items }}"
+              loop_control:
+                loop_var: systemd_section
+
+          when: >-
+            ( systemd_file.state is not defined ) or
+            ( systemd_file.state is regex('^edited|present$') )
+
       when: systemd_file_state.stat.exists | bool
 
-    - name: Systemd unit file edited
-      block:
-
-        - name: Comment present at the top of the systemd unit file
-          ansible.builtin.blockinfile:
-            path: "{{ systemd_file.path }}"
-            block: "{{ systemd_file.comment | ansible.builtin.comment }}"
-            insertbefore: BOF
-            mode: "0644"
-            owner: root
-            group: root
-          when:
-            - systemd_file.comment is defined
-            - systemd_file.comment | length > 0
-
-        - name: Ansible managed comment present at the top of the file
-          ansible.builtin.lineinfile:
-            path: "{{ systemd_file.path }}"
-            line: "# Ansible managed"
-            state: present
-            insertbefore: BOF
-
-        - name: Include the systemd unit file edited tasks
-          ansible.builtin.include_tasks: file_edited.yml
-          loop: "{{ systemd_file.conf | dict2items }}"
-          loop_control:
-            loop_var: systemd_section
-
-      when:
-        - systemd_file_state.stat.exists | bool
-        - systemd_file.state is defined
-        - systemd_file.state is regex('^edited|present$')
-
-    - name: Systemd unit file templated
+    - name: Systemd unit file not existing or templated tasks
       block:
 
         - name: Systemd unit file directory present
@@ -103,7 +102,7 @@
             owner: root
             group: root
 
-        - name: Systemd unit file present
+        - name: Systemd unit file templated
           ansible.builtin.template:
             src: unit.j2
             dest: "{{ systemd_file.path }}"
