--- a/tasks/file_present.yml
+++ b/tasks/file_present.yml
@@ -60,14 +60,27 @@
         - name: Systemd unit file edited
           block:
 
-            - name: Comment present at the top of the systemd unit file
-              ansible.builtin.blockinfile:
-                path: "{{ systemd_file.path }}"
-                block: "{{ systemd_file.comment | ansible.builtin.comment }}"
-                insertbefore: BOF
-                mode: "0644"
-                owner: root
-                group: root
+            - name: Comment block present
+              block:
+
+                - name: Ansible managed comment absent from the top of the file
+                  ansible.builtin.lineinfile:
+                    path: "{{ systemd_file.path }}"
+                    line: "# {{ systemd_ansible_managed }}"
+                    state: absent
+                    mode: "0644"
+                    owner: root
+                    group: root
+
+                - name: Comment present at the top of the systemd unit file
+                  ansible.builtin.blockinfile:
+                    path: "{{ systemd_file.path }}"
+                    block: "{{ systemd_file.comment | ansible.builtin.comment }}"
+                    insertbefore: BOF
+                    mode: "0644"
+                    owner: root
+                    group: root
+
               when:
                 - systemd_file.comment is defined
                 - systemd_file.comment | length > 0
@@ -78,6 +91,9 @@
                 line: "# {{ systemd_ansible_managed }}"
                 state: present
                 insertbefore: BOF
+                mode: "0644"
+                owner: root
+                group: root
 
             - name: Include the systemd unit file edited tasks
               ansible.builtin.include_tasks: file_edited.yml
