--- a/meta/argument_specs.yml
+++ b/meta/argument_specs.yml
@@ -8,7 +8,7 @@ argument_specs:
       systemd:
         type: bool
         required: true
-        description: Run the tasks in this role
+        description: Run the tasks in this role.
       systemd_units:
         type: list
         required: false
