--- a/tasks/timesyncd.yml
+++ b/tasks/timesyncd.yml
@@ -42,11 +42,23 @@
     - name: Set a variable for the timedatectl status dictionary
       ansible.builtin.set_fact:
         systemd_timedatectl_status: "{{ systemd_timedatectl_status_command.stdout | community.general.jc('timedatectl') }}"
+        systemd_timedatectl_tz: "{{ (systemd_timedatectl_status_command.stdout | community.general.jc('timedatectl') | community.general.json_query('time_zone') | ansible.builtin.split(' '))[0] }}"
 
     - name: Debug the timedatectl status
       ansible.builtin.debug:
         var: systemd_timedatectl_status
         verbosity: 2
+
+    - name: Debug the timedatectl tz
+      ansible.builtin.debug:
+        var: systemd_timedatectl_tz
+        verbosity: 2
+
+    - name: Set the timezone
+      community.general.timezone:
+        name: "{{ systemd_tz }}"
+        hwclock: UTC
+      when: systemd_timedatectl_tz != systemd_tz
 
     - name: Set the time if not synchronized
       block:
