--- a/tasks/unit_present.yml
+++ b/tasks/unit_present.yml
@@ -62,6 +62,11 @@
 
       when: systemd_file_state.stat.exists | bool
 
+    - name: Stat the systemd unit file
+      ansible.builtin.stat:
+        path: "{{ systemd_file.path }}"
+      register: systemd_file_state
+
   tags:
     - systemd
 ...
