--- a/tasks/file_absent.yml
+++ b/tasks/file_absent.yml
@@ -15,6 +15,8 @@
     - name: Systemd unit file absent, backup present
       ansible.builtin.command: "mv {{ systemd_file.path }} {{ systemd_file_backup }}"
       register: systemd_file_absent
+      notify:
+        - Reload systemd
       when: systemd_file_absent.stat.exists | bool
 
     - name: Include check and flush handler tasks when files have changed
